# lable_v2

./: pyproject.toml
core/catalog/: admin.py  models.py  urls.py  views.py
core/catalog/migrations/: 0001_initial.py  0002_pricetype_productprice.py
core/core/: settings.py  urls.py
core/storefront/: urls.py  views.py
core/templates/: base.html
core/templates/account/: base_userauth.html  login.html  logout.html
core/templates/catalog/: category_list.html  product_list.html
core/templates/inc/: backend_footer.html  backend_header.html
core/templates/userprofile/: base_userprofile.html  profile.html
core/userprofile/: apps.py  models.py  signals.py  urls.py  views.py
core/userprofile/migrations/: 0001_initial.py  0002_rename_name_userprofile_user.py
