[tool.poetry]
name = "label-v2"
version = "0.1.0"
description = ""
authors = ["BlackDP <blackdp@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
django-allauth = "^0.60.1"
django-mptt = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
